--- a/Tools/FastXor.html
+++ b/Tools/FastXor.html
@@ -232,12 +232,11 @@
             let output = '';
             const bytesPerLine = 16;
 
-            output += 'OFFSET     00 01 02 03 04 05 06 07  08 09 0A 0B 0C 0D 0E 0F   ' + encoding + '\n';
-            output += '\n';
+            output += 'OFFSET    00       04       08       0C        ' + encoding + '\n';
 
             for (let i = 0; i < data.length; i += bytesPerLine) {
                 // 地址
-                output += i.toString(16).padStart(8, '0') + ' │';
+                output += i.toString(16).padStart(8, '0') + '  ';
 
                 // 十六进制值
                 let encodedPart = new Uint8Array(bytesPerLine);
@@ -245,19 +244,19 @@
                 for (let j = 0; j < bytesPerLine; j++) {
                     if (i + j < data.length) {
                         const byte = data[i + j];
-                        hexPart += ' ' + byte.toString(16).padStart(2, '0').toUpperCase();
+                        hexPart += byte.toString(16).padStart(2, '0').toUpperCase();
                         encodedPart[j] = byte;
                     } else {
-                        hexPart += '   ';
+                        hexPart += '  ';
                         encodedPart[j] = 0;
                     }
-                    if (j === 7) hexPart += ' ';
+                    if (j % 4 === 3) hexPart += ' ';
                 }
                 output += hexPart;
 
                 // 编码表示
                 let decodedText = decodeText(encodedPart.slice(0, Math.min(bytesPerLine, data.length - i)), encoding);
-                output += ' │ ' + formatDecodedText(decodedText, bytesPerLine) + ' \n';
+                output += ' ' + formatDecodedText(decodedText, bytesPerLine) + ' \n';
             }
 
             hexView.textContent = output;
