--- a/Tools/Html_Tools/HalfFloatToUV.html
+++ b/Tools/Html_Tools/HalfFloatToUV.html
@@ -110,7 +110,7 @@
     <div class="container">
         <h2 class="title_name">IEEE 754半精度浮点数转UV值</h2>
         <h3>16进制:</h3>
-        <h7>-0x10(Map), -0xC(property), -0x8(Weapon&Character)</h7>
+        <h7>-0x10(Map), -0x10(property), -0x8(Weapon&Character)</h7>
         <div class="input-group">
             <input type="text" id="hexInput" value="003C0038">
         </div>
